App finalized and shinylive version exported

--- a/education_fix.ipynb
+++ b/education_fix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,40 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Highschool, Technical school, Undergraduate, Master's, PhD    7\n",
-       "Technical school, Undergraduate, Master's, PhD                6\n",
-       "Undergraduate, Master's, PhD                                  3\n",
-       "No Requirements                                               2\n",
-       "Highschool                                                    2\n",
-       "Master's, Phd                                                 1\n",
-       "Master's                                                      1\n",
-       "Undergraduate                                                 1\n",
-       "Highschool, Technical school, Undergraduate                   1\n",
-       "Highschool, Technical school, Undergraduate, Master's         1\n",
-       "Technical school                                              1\n",
-       "PhD                                                           1\n",
-       "                                                              1\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.Series(education_replacement_fixed.values()).value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +157,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,12 +168,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['over 3 years', 'Informal', 'More than 5 years',\n",
+       "       'More than 10 years', 'More than 6 years', 'For more than 2 years',\n",
+       "       'More than 1 year', 'For more than 4 years', 'More than 8 years',\n",
+       "       'More than 7 years', 'Not specified', 'For more than 9 years'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jobs_translated['Working Experience'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp_replace = {\n",
+    "    \"over 3 years\": 3,\n",
+    "    \"Informal\": 0,\n",
+    "    \"More than 5 years\": 5,\n",
+    "    \"More than 10 years\": 10,\n",
+    "    \"More than 6 years\": 6,\n",
+    "    \"For more than 2 years\": 2,\n",
+    "    \"More than 1 year\": 1,\n",
+    "    \"For more than 4 years\": 4,\n",
+    "    \"More than 8 years\": 8,\n",
+    "    \"More than 7 years\": 7,\n",
+    "    \"Not specified\": 0,\n",
+    "    \"For more than 9 years\": 9,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\faust\\AppData\\Local\\Temp\\ipykernel_19432\\3425865732.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  jobs_translated['Working Experience (in Years)'] = jobs_translated['Working Experience'].replace(exp_replace)\n"
+     ]
+    }
+   ],
+   "source": [
+    "jobs_translated['Working Experience (in Years)'] = jobs_translated['Working Experience'].replace(exp_replace)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     653\n",
+       "1     425\n",
+       "2     391\n",
+       "3     368\n",
+       "4     288\n",
+       "5     262\n",
+       "6     245\n",
+       "7     226\n",
+       "8     209\n",
+       "9     205\n",
+       "10    204\n",
+       "11    202\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jobbencount = jobs_translated['Company Name'].value_counts().reset_index()['count'] \n",
+    "jobbencount[jobbencount > 200]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "jobs_translated.to_csv('jobs_translated_edufix.csv', index=False)\n",
-    "jobs_translated.to_csv('dashboard/jobs_app_1.csv', index=False)"
+    "jobs_translated.to_csv('basic-navigation/jobs_app_1.csv', index=False)"
    ]
   }
  ],
